2.90 -> 2.91
	- create rpmbzio.c to avoid implicit dependence on libbz2 for installer.
	- spec files can provide /filename now

2.5.x -> 2.90
	- added --excludepath
	- identify missing keys by type (Toshio Kuratomi).
	- package install/removal much smarter about symlinks
	- redid install/remove API to allow transaction semantics
	- support for GPG (Toshio Kuratomi <badger@prtr-13.ucsc.edu>)
	- file lookup finally sane wrt symbolic links :-)
	- fileindex format changed -- rebuilddb is necessary for rpm 2.90!!
	- --rebuilddb doesn't open old index files
	- permit http:// and file:// url's as well as ftp://.
	- change --rcfile to permit colon separated file list.
	- compile in defaults from rpmrc/macros.
	- finish hiding rpmdb index record data ("matches").
	- implement abstract fd type almost everywhere.
	- update and rename Czech (Pavel Makovec <pavelm@terminal.cz>)
	- augment --showrc with -v, only display set variables without -v.
	- add macrofiles variable, permit second entry to initMacros().
	- add config.h defines for paths to find-requires et. al.
	- add readRPM to libbuild, headerGetLangs to librpm.
	- permit rpm to be built in a sub-directory (--srcdir=DIR).
	- configure using automake.
	- arch/os (and platform) should be case insensitive everywhere forever.
	- attempt to deal rationally with os as "Linux" or "linux".
	- add generalized expression handler (Tom Dyas<tdyas@remus.rutgers.edu>)
	- use /usr/lib/rpm/mkinstalldirs if mkdir -p fails.
	- more portable dirent handling (Hermann Lauer).
	- add Slovak translation (Stanislav Meduna <stano@trillian.eunet.sk>)
	- gettextify rpmMessage/rpmError/fprintf messages.
	- update po files; add cz to catalogs.
	- cpio_gzip: dup the fd before doing gzdopen (Thanks Erik!)
	- add --noLang to skip non-default languages.
	- writeRPM can now copy cpio archive from fd.
	- preliminary macro environment as side effect of rpmrc parse.
	- macro handling in rpmlib -- rework include: tag with macro expansion.